{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 49,
  "lineage": "f8e95cf3-f074-573a-1cc2-8551ab2e562f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084a7a94aaf2df4f3",
            "arn": "arn:aws:ec2:us-east-1:690248313330:elastic-ip/eipalloc-084a7a94aaf2df4f3",
            "association_id": "eipassoc-0a6c63e34657a635b",
            "domain": "vpc",
            "id": "eipalloc-084a7a94aaf2df4f3",
            "instance": "i-012980fcf7669f7f0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-097036f6e7a99b553",
            "private_dns": "ip-10-0-101-148.ec2.internal",
            "private_ip": "10.0.101.148",
            "public_dns": "ec2-3-215-5-123.compute-1.amazonaws.com",
            "public_ip": "3.215.5.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_public_ec2_instance.aws_eip.this",
            "module.ec2_public_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_public_ec2_instance.aws_iam_role.this",
            "module.ec2_public_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_public_ec2_instance.aws_instance.ignore_ami",
            "module.ec2_public_ec2_instance.aws_instance.this",
            "module.ec2_public_ec2_instance.aws_spot_instance_request.this",
            "module.ec2_public_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public_ec2_instance.data.aws_partition.current",
            "module.ec2_public_ec2_instance.data.aws_ssm_parameter.this",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.clb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-0a3ab75da64a734fa",
            "description": "Security group open to the world for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3ab75da64a734fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadbalancer_sg-20250427213606636700000002",
            "name_prefix": "loadbalancer_sg-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.clb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3653594729",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a3ab75da64a734fa",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clb_sg.aws_security_group.this",
            "module.clb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-726339343",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3ab75da64a734fa",
            "security_group_rule_id": "sgr-02cf606d803b988f1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clb_sg.aws_security_group.this",
            "module.clb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP 81 - Allow from Internet",
            "from_port": 81,
            "id": "sgrule-3303174505",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a3ab75da64a734fa",
            "security_group_rule_id": "sgr-0278ae93a58c64d08",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clb_sg.aws_security_group.this",
            "module.clb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private_ec2_instance[\"0\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-0ace1a251a942ade2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ace1a251a942ade2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cf19a3d47c06bc8",
            "private_dns": "ip-10-0-1-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0215f270a1618dd2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a52d13005c84d3e3",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT - dev - private ec2 instance"
            },
            "vpc_security_group_ids": [
              "sg-01f2a03d65b7f2e53"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_private_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance.aws_iam_role.this",
            "module.ec2_private_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance.data.aws_partition.current",
            "module.ec2_private_ec2_instance.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private_ec2_instance[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-024640cfdb73f8076",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024640cfdb73f8076",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0349082d73a28ce5e",
            "private_dns": "ip-10-0-2-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09526517ac6afc0fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020e94ee3bc25a548",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT - dev - private ec2 instance"
            },
            "vpc_security_group_ids": [
              "sg-01f2a03d65b7f2e53"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_private_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance.aws_iam_role.this",
            "module.ec2_private_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance.data.aws_partition.current",
            "module.ec2_private_ec2_instance.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-012980fcf7669f7f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012980fcf7669f7f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-097036f6e7a99b553",
            "private_dns": "ip-10-0-101-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.148",
            "public_dns": "ec2-3-215-5-123.compute-1.amazonaws.com",
            "public_ip": "3.215.5.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ea338de8537eb94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d887d007a7398e5",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT-dev-vpc- public ec2 instance"
            },
            "vpc_security_group_ids": [
              "sg-08baeb05c521fe170"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_public_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_public_ec2_instance.aws_iam_role.this",
            "module.ec2_public_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public_ec2_instance.data.aws_partition.current",
            "module.ec2_public_ec2_instance.data.aws_ssm_parameter.this",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:loadbalancer/my-elb-name",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-elb-name-1335534472.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-elb-name",
            "idle_timeout": 60,
            "instances": [
              "i-024640cfdb73f8076",
              "i-0ace1a251a942ade2"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 81,
                "lb_protocol": "http"
              }
            ],
            "name": "my-elb-name",
            "security_groups": [
              "sg-0a3ab75da64a734fa"
            ],
            "source_security_group": "690248313330/loadbalancer_sg-20250427213606636700000002",
            "source_security_group_id": "sg-0a3ab75da64a734fa",
            "subnets": [
              "subnet-028438dcb405707d1",
              "subnet-02d887d007a7398e5"
            ],
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "my-elb-name"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "my-elb-name"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.clb_sg.aws_security_group.this",
            "module.clb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-01f2a03d65b7f2e53",
            "description": "Security group for bastian host with SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f2a03d65b7f2e53",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-IT-private-sg-https-20250427213606636700000001",
            "name_prefix": "dev-IT-private-sg-https-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-398168789",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01f2a03d65b7f2e53",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2793338545",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f2a03d65b7f2e53",
            "security_group_rule_id": "sgr-090dad77aceb08e29",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-706099087",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f2a03d65b7f2e53",
            "security_group_rule_id": "sgr-07f3e9d1e7fa67083",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-08baeb05c521fe170",
            "description": "Security group for bastian host with SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08baeb05c521fe170",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-IT-bastian-sg-ssh-20250427213608393400000004",
            "name_prefix": "dev-IT-bastian-sg-ssh-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1193498021",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08baeb05c521fe170",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1890555253",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08baeb05c521fe170",
            "security_group_rule_id": "sgr-08a3fb81cc8671a64",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:network-acl/acl-01b44bc9d4c096c91",
            "default_network_acl_id": "acl-01b44bc9d4c096c91",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01b44bc9d4c096c91",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "690248313330",
            "subnet_ids": [
              "subnet-020e94ee3bc25a548",
              "subnet-028438dcb405707d1",
              "subnet-02d887d007a7398e5",
              "subnet-0a52d13005c84d3e3",
              "subnet-0c3f2a226ea7c6b55",
              "subnet-0f9ac922ac7637580"
            ],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-0357326d5682fc73e",
            "default_route_table_id": "rtb-0357326d5682fc73e",
            "id": "rtb-0357326d5682fc73e",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-03397d71f2d7a20a9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03397d71f2d7a20a9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063ffdd5a2aac0251",
            "arn": "arn:aws:ec2:us-east-1:690248313330:elastic-ip/eipalloc-063ffdd5a2aac0251",
            "association_id": "eipassoc-0a09057e3aa9d9617",
            "domain": "vpc",
            "id": "eipalloc-063ffdd5a2aac0251",
            "network_border_group": "us-east-1",
            "network_interface": "eni-036cc5565b085ea7a",
            "private_dns": "ip-10-0-101-156.ec2.internal",
            "private_ip": "10.0.101.156",
            "public_dns": "ec2-3-216-171-63.compute-1.amazonaws.com",
            "public_ip": "3.216.171.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:internet-gateway/igw-0d2f57ce5e2d46e99",
            "id": "igw-0d2f57ce5e2d46e99",
            "owner_id": "690248313330",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063ffdd5a2aac0251",
            "association_id": "eipassoc-0a09057e3aa9d9617",
            "connectivity_type": "public",
            "id": "nat-0bb4e9641d22d423d",
            "network_interface_id": "eni-036cc5565b085ea7a",
            "private_ip": "10.0.101.156",
            "public_ip": "3.216.171.63",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d887d007a7398e5",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06dd06cd258a5ce311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bb4e9641d22d423d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06dd06cd258a5ce31",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d2f57ce5e2d46e99",
            "id": "r-rtb-07fb89a64a5acfc5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07fb89a64a5acfc5d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-0ea3cfae80deab5c1",
            "id": "rtb-0ea3cfae80deab5c1",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-db"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-06dd06cd258a5ce31",
            "id": "rtb-06dd06cd258a5ce31",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb4e9641d22d423d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-private"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-07fb89a64a5acfc5d",
            "id": "rtb-07fb89a64a5acfc5d",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2f57ce5e2d46e99",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-public"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e00d824e688b51e",
            "route_table_id": "rtb-0ea3cfae80deab5c1",
            "subnet_id": "subnet-0c3f2a226ea7c6b55"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c93f6da780eac21a",
            "route_table_id": "rtb-0ea3cfae80deab5c1",
            "subnet_id": "subnet-0f9ac922ac7637580"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5f997433e215baf",
            "route_table_id": "rtb-06dd06cd258a5ce31",
            "subnet_id": "subnet-0a52d13005c84d3e3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba5e3a443ef2939a",
            "route_table_id": "rtb-06dd06cd258a5ce31",
            "subnet_id": "subnet-020e94ee3bc25a548"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d14d5bc5ac2b34c7",
            "route_table_id": "rtb-07fb89a64a5acfc5d",
            "subnet_id": "subnet-02d887d007a7398e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cecf39debc3965ff",
            "route_table_id": "rtb-07fb89a64a5acfc5d",
            "subnet_id": "subnet-028438dcb405707d1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0c3f2a226ea7c6b55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3f2a226ea7c6b55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0f9ac922ac7637580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9ac922ac7637580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0a52d13005c84d3e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a52d13005c84d3e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-020e94ee3bc25a548",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e94ee3bc25a548",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-02d887d007a7398e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d887d007a7398e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-028438dcb405707d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028438dcb405707d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-0f9a5d2209b4e50c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:vpc/vpc-0f9a5d2209b4e50c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b44bc9d4c096c91",
            "default_route_table_id": "rtb-0357326d5682fc73e",
            "default_security_group_id": "sg-03397d71f2d7a20a9",
            "dhcp_options_id": "dopt-0d229ad7ffd0a5ec3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9a5d2209b4e50c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0357326d5682fc73e",
            "owner_id": "690248313330",
            "tags": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            },
            "tags_all": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}